# framer

./: .gitignore  App.old  Cargo.toml  README.md  context-for-next-steps.md  feature_outline_20250613054339.txt  last-situation.txt  overall_plan_20250613043300.md  rush.json  zig-linker.sh
.m8a/argoCD/: application.yaml
.m8a/deployments/framer-site/: deployment.yaml  mapping.yaml  namespace.yaml  service.yaml
apps/framer/: .gitignore  dpi-feature.txt  feature_outline_20250613054339.txt  last-situation.txt  package.json  vue-quasar-integration.md
apps/framer/src/: index.html
apps/framer/src-frontend/: index.html  package.json  vite.config.ts
apps/framer/src-frontend/public/: icon.icns
apps/framer/src-frontend/src/: App.vue  main.ts  style.css
apps/framer/src-tauri/: tauri.conf.json
apps/framer/src-tauri/capabilities/: default.json  (+1 more)
common/config/rush/: command-line.json  pnpm-lock.yaml
sites/framer/: Dockerfile  docs.md  downloads.md  imprint.md  index.md  package.json  pnpm-lock.yaml  support.md
sites/framer/.vitepress/: config.ts
src/: control.html  control_renderer.js  index.html  renderer.js  style.css  test.html
src-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src-frontend/src/: App.vue  main.ts
src-frontend/src/components/: ControlsArea.vue
src-frontend/src/composables/: useAppSysInfo.ts  useFrameDragging.ts  useFramePersistence.ts  useWindowInteractiveState.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.old-json
src-tauri/capabilities/: control-window-access.json
src-tauri/src/: lib.rs  main.rs
(+18 files in other folders)
